--- a/orchestration/pipeline_nsw_doe/assets/raw/exploritary_data_analysis/exploritary-data-analysis-nsw-doe-ram-upstream-from-dagster-asset.ipynb
+++ b/orchestration/pipeline_nsw_doe/assets/raw/exploritary_data_analysis/exploritary-data-analysis-nsw-doe-ram-upstream-from-dagster-asset.ipynb
@@ -16,7 +16,7 @@
     "from dagster import AssetKey\n",
     "from ydata_profiling import ProfileReport\n",
     "\n",
-    "from orchestration.pipeline_nsw_doe import defs"
+    "from pipeline_nsw_doe import defs"
    ]
   },
   {
