--- a/orchestration/pipeline_nsw_doe/assets/raw/exploritary_data_analysis/exploritary-data-analysis-nsw-doe-apprentiships.ipynb
+++ b/orchestration/pipeline_nsw_doe/assets/raw/exploritary_data_analysis/exploritary-data-analysis-nsw-doe-apprentiships.ipynb
@@ -11,25 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://data.nsw.gov.au/data/dataset/b558a070-09f5-4941-a140-e60a744327bf/resource/df5e3989-0595-4c61-94ab-0f63ab6b1528/download/2023-attendance-rates-by-government-schools.csv'"
+    "# url = 'https://data.nsw.gov.au/data/dataset/f7cba3fc-6e9b-4b8b-b1fd-e7dda9b49001/resource/54d2df2f-44ae-4d67-980f-ce855d68f2d5/download/apprenticeship_traineeship_training_contract_approvals-1.xlsx'\n",
+    "# url = \"https://data.nsw.gov.au/data/dataset/f7cba3fc-6e9b-4b8b-b1fd-e7dda9b49001/resource/e969d98e-d89a-474b-b89b-9452f1e45644/download/apprenticeship_traineeship_training_contract_completions.xlsx\"\n",
+    "url = \"https://data.nsw.gov.au/data/dataset/f7cba3fc-6e9b-4b8b-b1fd-e7dda9b49001/resource/fe7169bf-32ba-433b-8354-eb9ef5477eaa/download/apprenticeship_traineeship_training_contract_in-trainings.xlsx\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(url)"
+    "df = pd.read_excel(url, sheet_name=\"Training Type\", header=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -53,129 +55,60 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>school_code</th>\n",
-       "      <th>school_name</th>\n",
-       "      <th>2011</th>\n",
-       "      <th>2012</th>\n",
-       "      <th>2013</th>\n",
-       "      <th>2014</th>\n",
-       "      <th>2015</th>\n",
-       "      <th>2016</th>\n",
-       "      <th>2017</th>\n",
-       "      <th>2018</th>\n",
-       "      <th>2019</th>\n",
-       "      <th>2021</th>\n",
-       "      <th>2022</th>\n",
-       "      <th>2023</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Training Type</th>\n",
+       "      <th>Number of Training Contract</th>\n",
+       "      <th>Number of Women in Non-Traditional Trade</th>\n",
+       "      <th>% of Women in Non-Traditional Trade</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>Abbotsford Public School</td>\n",
-       "      <td>94.3</td>\n",
-       "      <td>95.9</td>\n",
-       "      <td>95.7</td>\n",
-       "      <td>95.3</td>\n",
-       "      <td>94.6</td>\n",
-       "      <td>95.2</td>\n",
-       "      <td>94.1</td>\n",
-       "      <td>94.9</td>\n",
-       "      <td>94.3</td>\n",
-       "      <td>94.3</td>\n",
-       "      <td>89</td>\n",
-       "      <td>92.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Apprenticeship</td>\n",
+       "      <td>67,691</td>\n",
+       "      <td>3431</td>\n",
+       "      <td>0.050686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1002.0</td>\n",
-       "      <td>Aberdeen Public School</td>\n",
-       "      <td>93.6</td>\n",
-       "      <td>94.2</td>\n",
-       "      <td>95.2</td>\n",
-       "      <td>95.3</td>\n",
-       "      <td>95</td>\n",
-       "      <td>92.7</td>\n",
-       "      <td>91.9</td>\n",
-       "      <td>91.3</td>\n",
-       "      <td>89.5</td>\n",
-       "      <td>88.4</td>\n",
-       "      <td>83.9</td>\n",
-       "      <td>88.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Existing Worker Traineeship</td>\n",
+       "      <td>2,699</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1003.0</td>\n",
-       "      <td>Abermain Public School</td>\n",
-       "      <td>93.5</td>\n",
-       "      <td>93</td>\n",
-       "      <td>92</td>\n",
-       "      <td>92.8</td>\n",
-       "      <td>91.4</td>\n",
-       "      <td>91.5</td>\n",
-       "      <td>92.8</td>\n",
-       "      <td>91</td>\n",
-       "      <td>90.3</td>\n",
-       "      <td>89.2</td>\n",
-       "      <td>85.2</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1007.0</td>\n",
-       "      <td>Adaminaby Public School</td>\n",
-       "      <td>95.4</td>\n",
-       "      <td>96.4</td>\n",
-       "      <td>97.2</td>\n",
-       "      <td>96.2</td>\n",
-       "      <td>90.9</td>\n",
-       "      <td>85.5</td>\n",
-       "      <td>95.6</td>\n",
-       "      <td>92.2</td>\n",
-       "      <td>94</td>\n",
-       "      <td>90.7</td>\n",
-       "      <td>75.7</td>\n",
-       "      <td>89.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1008.0</td>\n",
-       "      <td>Adamstown Public School</td>\n",
-       "      <td>94.8</td>\n",
-       "      <td>95.4</td>\n",
-       "      <td>94.7</td>\n",
-       "      <td>95.8</td>\n",
-       "      <td>95.1</td>\n",
-       "      <td>93.2</td>\n",
-       "      <td>93</td>\n",
-       "      <td>92.6</td>\n",
-       "      <td>92.7</td>\n",
-       "      <td>93.3</td>\n",
-       "      <td>87.5</td>\n",
-       "      <td>93.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>New Entrant Traineeship</td>\n",
+       "      <td>33,048</td>\n",
+       "      <td>&lt;5</td>\n",
+       "      <td>0.000030</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   school_code               school_name  2011  2012  2013  2014  2015  2016  \\\n",
-       "0       1001.0  Abbotsford Public School  94.3  95.9  95.7  95.3  94.6  95.2   \n",
-       "1       1002.0    Aberdeen Public School  93.6  94.2  95.2  95.3    95  92.7   \n",
-       "2       1003.0    Abermain Public School  93.5    93    92  92.8  91.4  91.5   \n",
-       "3       1007.0   Adaminaby Public School  95.4  96.4  97.2  96.2  90.9  85.5   \n",
-       "4       1008.0   Adamstown Public School  94.8  95.4  94.7  95.8  95.1  93.2   \n",
+       "   Unnamed: 0                Training Type Number of Training Contract  \\\n",
+       "0         NaN               Apprenticeship                      67,691   \n",
+       "1         NaN  Existing Worker Traineeship                       2,699   \n",
+       "2         NaN      New Entrant Traineeship                      33,048   \n",
        "\n",
-       "   2017  2018  2019  2021  2022  2023  \n",
-       "0  94.1  94.9  94.3  94.3    89  92.3  \n",
-       "1  91.9  91.3  89.5  88.4  83.9  88.5  \n",
-       "2  92.8    91  90.3  89.2  85.2    88  \n",
-       "3  95.6  92.2    94  90.7  75.7  89.9  \n",
-       "4    93  92.6  92.7  93.3  87.5  93.1  "
+       "  Number of Women in Non-Traditional Trade  \\\n",
+       "0                                     3431   \n",
+       "1                                      NaN   \n",
+       "2                                       <5   \n",
+       "\n",
+       "   % of Women in Non-Traditional Trade  \n",
+       "0                             0.050686  \n",
+       "1                                  NaN  \n",
+       "2                             0.000030  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
